--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "core-js": "^3",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "moti": "^0.8.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-reanimated": "2.0.0-rc.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
